# product-feedback

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  init.sh  leptosfmt.toml  package-lock.json  package.json
public/starter-code/: data.json
src/: app.rs  lib.rs  main.rs
src/app/: components.rs
src/app/components/: filter.rs  nav.rs
src/app/layouts/: base.rs
style/: tailwind.css
