[package]
name = "product-feedback"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.6.20", optional = true }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
http = "0.2.9"
leptos = { version = "0.5.1", features = ["nightly", "experimental-islands"] }
leptos_axum = { version = "0.5.1", optional = true, features = [
  "experimental-islands",
] }
leptos_meta = { version = "0.5.1", features = ["nightly"] }
leptos_router = { version = "0.5.1", features = ["nightly"] }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
simple_logger = "4.2.0"
thiserror = "1.0.50"
tokio = { version = "1.28.2", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.4", features = ["fs"], optional = true }
tracing = { version = "0.1.40", optional = true }
wasm-bindgen = "0.2.87"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
]

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "z"

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
assets-dir = "public"
bin-features = ["ssr"]
browserquery = "defaults"
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
env = "DEV"
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
reload-port = 3001
site-addr = "127.0.0.1:3000"
site-pkg-dir = "pkg"
site-root = "target/site"
tailwind-input-file = "style/tailwind.css"
watch = false
